--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -31,7 +31,7 @@
                     Grade (WHO)
                 </th>
                 <th>
-                    Tumor Size
+                    Tumor Size (mm)
                 </th>
                 <th>
                     Location
