--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -1,15 +1,22 @@
 ﻿@model TumorTaskforce_Webapp_1.Patient
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Compare";
 }
 
-<h2>Details</h2>
+<h2>Compare (Unfinished Feature)</h2>
 
 <div>
-    <h4>Results</h4>
+    <h4>Patient @Html.DisplayFor(model => model.patientID)</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            General Info
+        </dt>
+
+        <dd>
+            ------------------------------ 
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Sex)
         </dt>
@@ -35,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HistologicalClassification)
+            Classification
         </dt>
 
         <dd>
@@ -43,7 +50,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HistologicalGrade)
+            Grade (WHO)
         </dt>
 
         <dd>
@@ -51,31 +58,35 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TumorWidth)
+            Tumor Size (WxHxL)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TumorWidth)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TumorHeight)
-        </dt>
-
-        <dd>
+            x
             @Html.DisplayFor(model => model.TumorHeight)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TumorLength)
-        </dt>
-
-        <dd>
+            x
             @Html.DisplayFor(model => model.TumorLength)
         </dd>
 
+        @*<dt>
+                @Html.DisplayNameFor(model => model.TumorHeight)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TumorHeight)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.TumorLength)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TumorLength)
+            </dd>*@
+
         <dt>
-            @Html.DisplayNameFor(model => model.TumorLocation)
+            Location
         </dt>
 
         <dd>
@@ -83,10 +94,12 @@
         </dd>
 
         <dt>
+            <br />Review of Systems<br />
             @Html.DisplayNameFor(model => model.Constitutional)
         </dt>
 
         <dd>
+            <br />------------------------------ <br />
             @Html.DisplayFor(model => model.Constitutional)
         </dd>
 
@@ -139,7 +152,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Exercize)
+            Exercise
         </dt>
 
         <dd>
@@ -154,9 +167,161 @@
             @Html.DisplayFor(model => model.Diet)
         </dd>
 
+        <dt>
+            <br />
+            Symptoms
+        </dt>
+
+        <dd>
+            <br />
+            @foreach (SymptomsPivot sp in Model.SymptomsPivots)
+            {
+                @Html.DisplayFor(spitem => sp.PossibleSymptom.Name)
+
+                if (sp.date != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.date)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.date)
+                }
+                if (sp.frequency != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.frequency)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.frequency)
+                }
+                if (sp.notes != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.notes)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.notes)
+                }
+                <br />
+            }
+            <br />
+        </dd>
+
+        <dt>
+            <br />
+            Other Medications
+        </dt>
+
+        <dd>
+            <br />
+            @foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
+            {
+                @Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
+
+                if (sp.date != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.date)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.date)
+                }
+                if (sp.frequency != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.frequency)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.frequency)
+                }
+                if (sp.notes != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.notes)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.notes)
+                }
+                <br />
+            }
+            <br />
+        </dd>
+
+        <dt>
+            <br />
+            Health Factors
+        </dt>
+
+        <dd>
+            <br />
+            @foreach (HealthFactorsPivot sp in Model.HealthFactorsPivots)
+            {
+                @Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
+                if (sp.date != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.date)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.date)
+                }
+                if (sp.frequency != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.frequency)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.frequency)
+                }
+                if (sp.notes != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.notes)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.notes)
+                }
+                <br />
+            }
+            <br />
+        </dd>
+
+        <dt>
+            <br />
+            Treatments Given
+        </dt>
+
+        <dd>
+            <br />
+            @foreach (TreatmentsPivot sp in Model.TreatmentsPivots)
+            {
+                @Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
+                if (sp.date != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.date)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.date)
+                }
+                if (sp.frequency != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.frequency)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.frequency)
+                }
+                if (sp.notes != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.notes)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.notes)
+                }
+                if (sp.effectiveness != null)
+                {
+                    <tag> // </tag>
+                    @Html.DisplayNameFor(spitem => sp.effectiveness)
+                    <tag>: </tag>
+                    @Html.DisplayFor(spitem => sp.effectiveness)
+                }
+                <br />
+            }
+            <br />
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.patientID }) |
-    @Html.ActionLink("Back to List", "Compare")
+    @Html.ActionLink("Back to Compare", "Compare")
 </p>
