table updates to all Index pages

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Index.cshtml
@@ -9,7 +9,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+
+<div class=" table-responsive">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.date)
@@ -55,3 +57,4 @@
 }
 
 </table>
+</div>
