--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Index.cshtml
@@ -11,8 +11,8 @@
     Or create it from the @Html.ActionLink("Patient", "Index", "Patients") Details page!
 </p>
 
-
-<table class="table">
+<div class="table-responsive"></div>
+<table class="table table-striped">
     <tr>
         <th>
             Symptom
@@ -40,3 +40,4 @@
 }
 
 </table>
+</div>
