Failed attempt to do search page, cant use php

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -10,9 +10,9 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<p>
-    @Html.ActionLink("Search For Patient", "Search")    @*this is what i added*@
-</p>
+@*<p>
+    @Html.ActionLink("Search For Patient", "Search")    @*this is what i added
+</p>*@
 
 <table class="table">
     <tr>
