--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Search.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Search.cshtml
@@ -1,17 +1,49 @@
-﻿@model TumorTaskforce_Webapp_1.Patient
-    Layout = null;
+﻿
+@*@model IEnumerable<TumorTaskforce_Webapp_1.Patient>
+    
+//CANNOT DO IT THIS WAY, PHP ISNT COMPATIBLE WITH .CSHTML :(
+
+
+
+
+@{ 
+    ViewBag.Title = "Search";
 }
 
-<!DOCTYPE html>
+<h2>Search</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class=" patient-container">
+       ?php
+            $server = "tumorserver";
+            $username = "tumortaskforce";
+            $password = "Password2017";
+            $dbname = "tumorDB";
+            $conn = mysqli_connect($server, $username, $password, $dbname);
+      
+            if (isset($POST['submit search'])) {
+                $search = mysqli_real_escape_string($conn, $_POST['search']);
+                $sql = "SELECT * FROM Patients WHERE
+                            patientID LIKE '%search%' OR
+                            sex LIKE '%search%' OR
+                            Age LIKE '%search%' OR
+                            HistologicalClassification LIKE '%search%'";
+                $result = mysqli_query($conn, $sql);
+                $queryResult = mysqli_num_rows($result);
+
+                if ($queryResult > 0) {
+                    while ($row = mysqli_fetch_assoc($result)) {
+                        echo "<a href='Patient.cshtml?ID=".$row['ID']."'><div class='patient-box'>
+                            <h3>".$row['patientID']."</h3>
+                        </div></a>";
+                    }    
+                } else {
+                        echo "There are no results for you";
+                }
+            }
+       ?>  
     </div>
-</body>
-</html>
+}*@
