--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -6,23 +6,38 @@
     <h1>Tumor App - Manage</h1>
     <p class="lead">Use the links below to manage possible entries</p>
 </div>
-
-<div class="row marketing">
+<div class="row">
     <div class="col-md-6">
         <h2>Manage Data</h2>
-
-        <div class="col-lg-5">
-            <p>
-                
-                @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors", null, new { @class = "btn btn-primary btn-large" }) <br />
-                @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments", null, new { @class = "btn btn-primary btn-large" }) <br />
-            </p>
-        </div>
-        <div class="col-lg-5">
-            @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds", null, new { @class = "btn btn-primary btn-large" }) <br />
-            @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms", null, new { @class = "btn btn-primary btn-large" })<br />
-
-        </div>
-
     </div>
 </div>
+
+    <div class="col-md-2">
+        <p>
+            @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
+        </p>
+    </div>
+
+
+    <div class="col-md-2">
+        <p>
+            @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") <br />
+        </p>
+    </div>
+
+    <div class="col-md-2">
+        <p>
+            @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") <br />
+        </p>
+
+    </div>
+
+    <div class="col-md-2">
+        <p>
+            @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms")<br />
+        </p>
+    </div>
+</div>
+                    
+
+
