--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Compare.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Compare.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Compare";
 }
 
-<h2>Compare (Unfinished Feature)</h2>
+<h2>Compare</h2>
 
 <p>
-    This section is under construction!
+    Select the patient to begin calculating results.
 </p>
 <div class="table-responsive">
     <table class="table table-striped">
