--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -11,7 +11,7 @@
         <h2>Manage Data</h2>
     </div>
 </div>
-
+<div class="row">
     <div class="col-md-2">
         <p>
             @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
