users, login, register, RBAC integration. More RBAC restrictions still coming

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         @Html.ActionLink("Compare", "Compare", "Patients")
                     </li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </nav>
     </div>
