--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -28,3 +28,4 @@
     </div>
 </div>
 Click @Html.ActionLink("Here", "Manage") to manage possible data entries for patients.<br />
+Click @Html.ActionLink("Here", "Index", "Users") to manage users and roles.<br />
