--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Index.cshtml
@@ -1,17 +1,29 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
 }
 
 
-
-@if (ViewBag.displayMenu == "Yes")
+@if (User.Identity.IsAuthenticated)
 {
-    <h1>Welcome Admin. Now you can create user Role.</h1>
-    <h3>
-        <li>@Html.ActionLink("Manage Role", "Index", "Role")</li>
-    </h3>
+    if (ViewBag.displayMenu == "Yes")
+    {
+        <h2>Welcome Admin. Here are the current users and their roles:</h2>
+        <h3>
+            LIST GOES HERE
+        </h3>
+    }
+    else
+    {
+        <h2>  Unauthorized. </h2>
+        <h3>
+            You need to be an administrator to access this page.
+        </h3>
+    }
 }
 else
 {
-    <h2>  Welcome <strong>@ViewBag.Name</strong> :) .We will add user module soon </h2>
-}  
+    <h2>  Unauthorized. </h2>
+    <h3>
+        Please log in or register to access this page.
+    </h3>
+}
